feat: Criação de relatórios para o prestador. O chat do cliente está funcionando.